prevent fractions from collapsing

--- a/_notes.scss
+++ b/_notes.scss
@@ -452,6 +452,7 @@ aside {
 
 .numerator, .denominator {
   display: block;
+  min-height: 1.25em;
 }
 
 .frac-line {
